syntax = "proto3";

package modelservice;

option go_package = "github.com/chat-api/model-categorizer/models/proto";

// Model represents a single LLM model
message Model {
  string id = 1;
  string name = 2;
  int32 context_size = 3;
  int32 max_tokens = 4;
  string provider = 5;
  string display_name = 6;
  string description = 7;
  double cost_per_token = 8;
  repeated string capabilities = 9;
  
  // Classification fields
  string family = 10;
  string type = 11;
  string series = 12;
  string variant = 13;
  bool is_default = 14;
  bool is_multimodal = 15;
  bool is_experimental = 16;
  string version = 17;
  
  // Additional metadata as string key-value pairs
  map<string, string> metadata = 20;
}

// LoadedModelList represents a list of models to be classified
message LoadedModelList {
  repeated Model models = 1;
  string default_provider = 2;
  string default_model = 3;
}

// ClassificationProperty represents a property by which models can be classified
message ClassificationProperty {
  string name = 1;
  string display_name = 2;
  string description = 3;
  repeated string possible_values = 4;
}

// ClassifiedModelGroup represents a group of models classified by a property
message ClassifiedModelGroup {
  string property_name = 1;
  string property_value = 2;
  repeated Model models = 3;
}

// ClassificationCriteria defines how models should be classified
message ClassificationCriteria {
  repeated string properties = 1;
  bool include_experimental = 2;
  bool include_deprecated = 3;
  int32 min_context_size = 4;
  bool hierarchical = 5;  // When true, returns hierarchical structure instead of flat groups
}

// ClassifiedModelResponse represents the response from the classification server
message ClassifiedModelResponse {
  repeated ClassifiedModelGroup classified_groups = 1;
  repeated ClassificationProperty available_properties = 2;
  string error_message = 3;
  repeated HierarchicalModelGroup hierarchical_groups = 4;  // Populated when hierarchical=true in request
}

// HierarchicalModelGroup represents a hierarchical grouping of models
message HierarchicalModelGroup {
  string group_name = 1;
  string group_value = 2;
  repeated Model models = 3;
  repeated HierarchicalModelGroup children = 4;
}

// The ModelClassificationService definition
service ModelClassificationService {
  // Classify a list of models
  rpc ClassifyModels(LoadedModelList) returns (ClassifiedModelResponse) {}
  
  // Classify models with criteria
  // Use hierarchical=true in ClassificationCriteria to get hierarchical grouping
  rpc ClassifyModelsWithCriteria(ClassificationCriteria) returns (ClassifiedModelResponse) {}
} 